--- a/index.html
+++ b/index.html
@@ -2,28 +2,75 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Chris Perardi</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
-		<link href='http://fonts.googleapis.com/css?family=Fira+Sans:300,400,400italic' rel='stylesheet' type='text/css'>
+
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
 
-        <!-- Add your site or application content here -->
-        <section class="main">
-        	<h1>Hello there.</h1>
-			<p class="intro">I'm a graphic designer and photographer.</p>
-			<p>I work a moderately stuffy 9&ndash;5, so ask for any design portfolio stuff. As for photography, you can <a href="https://www.flickr.com/photos/perardi">view far too much here</a>.</p>
-			<p>Want to work with me? <a href="mailto:design@perardi.com">Drop me a line</a>.</p>
-			<p class="note">Note that any design work comes with a surcharge for a variety of uppers and downers.</p>
-        </section>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+		<header>
+			<h1>Chris Perardi</h1>
+			<h2>A portfolio wherein I also learn CSS grid</h2>
+		</header>
+		
+		<section class="grid">
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+			<article>
+				<p>a test</p>
+				<div class="port_image">
+				</div>
+			</article>
+		</section>
+        
+        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
