--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -16,6 +16,9 @@
 </ul>
 
 <h3>Google Ads</h3>
+<ul>
+	<li><a href="google/experience_counts/index.html">Experience Counts 300x250</a></li>
+</ul>
 
 <h3>Postcards</h3>
 
