--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -24,6 +24,11 @@
 	<li><a href="walk/randy_walk_update.pdf">Ag Endorsement</a></li>
 </ul>
 
+<h3>Newspaper Ads</h3>
+<ul>
+	<li><a href="newspaper/decatur_ad.pdf">Decatur</a></li>
+</ul>
+
 </head>
 
 <body>
