--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -32,6 +32,9 @@
 <h3>6x11 Mailers</h3>
 <ul>
 	<li><a href="611_mailers/under_attack.pdf">Under Attack! (Potholes)</a></li>
+	<li><a href="611_mailers/protect_yourself.pdf">Protect Yourself (Guns)</a></li>
+	<li><a href="611_mailers/chicago_sellout.pdf">Chicago Sellouts (Vertical)</a></li>
+	<li><a href="611_mailers/upside_down.pdf">Chalkboard (Illustration)</a></li>			
 </ul>
 
 </head>
