Sticker and bleeds.

--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -34,7 +34,12 @@
 	<li><a href="611_mailers/under_attack.pdf">Under Attack! (Potholes)</a></li>
 	<li><a href="611_mailers/protect_yourself.pdf">Protect Yourself (Guns)</a></li>
 	<li><a href="611_mailers/chicago_sellout.pdf">Chicago Sellouts (Vertical)</a></li>
-	<li><a href="611_mailers/upside_down.pdf">Chalkboard (Illustration)</a></li>			
+	<li>Chalkboard (Illustration) [deprecated]</li>			
+</ul>
+
+<h3></h3>
+<ul>
+	<li><a href="sticker/3x3_sticker.pdf">Newspaper Sticker</a></li>		
 </ul>
 
 </head>
