--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -37,7 +37,7 @@
 	<li>Chalkboard (Illustration) [deprecated]</li>			
 </ul>
 
-<h3></h3>
+<h3>Stickers</h3>
 <ul>
 	<li><a href="sticker/3x3_sticker.pdf">Newspaper Sticker</a></li>		
 </ul>
