--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -28,9 +28,9 @@
 
 <h3>6x11 Mailers</h3>
 <ul>
-	<li>Experience Counts</li>
-	<li>Justice Is Blind</li>
-	<li>Vote for the Best </li>
+	<li><a href="611_mailers/experience_counts.pdf">Experience Counts</a></li>
+	<li><a href="611_mailers/justice_blind.pdf">Justice Is Blind</a></li>
+	<li><a href="611_mailers/vote_best.pdf">Vote for the Best</a></li>
 </ul>
 
 </head>
