--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -35,6 +35,7 @@
 	<li><a href="611_mailers/protect_yourself.pdf">Protect Yourself (Guns)</a></li>
 	<li><a href="611_mailers/chicago_sellout.pdf">Chicago Sellouts (Vertical)</a></li>
 	<li>Chalkboard (Illustration) [deprecated]</li>			
+	<li><a href="611_mailers/term_limits.pdf">Term Limits (Old Dude)</a></li>
 </ul>
 
 <h3>Stickers</h3>
