--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -29,7 +29,7 @@
 <h3>6x11 Mailers</h3>
 <ul>
 	<li><a href="611_mailers/experience_counts.pdf">Experience Counts</a></li>
-	<li><a href="611_mailers/justice_blind.pdf">Justice Is Blind></a></li>
+	<li><a href="611_mailers/justice_blind.pdf">Justice Is Blind</a></li>
 </ul>
 
 </head>
