--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -27,6 +27,7 @@
 <h3>Newspaper Ads</h3>
 <ul>
 	<li><a href="newspaper/decatur_ad.pdf">Decatur</a></li>
+	<li><a href="newspaper/decatur_ad_full.pdf">Full Page Ad</a></li>
 </ul>
 
 <h3>6x11 Mailers</h3>
