--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -14,6 +14,11 @@
 	<li><a href="more_better/index.html">Better Jobs</a></li>	
 </ul>
 
+<h3>Facebook Ads and Profiles</h3>
+<ul>
+	<li><a href="fb_vote_profile/profile_vote.jpg">Vote March 20th Profile Photo</a></li>
+</ul>
+
 <h3>Postcards</h3>
 <ul>
 	<li><a href="postcard/rkeith_card.pdf">Red Postcard</a></li>
