--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -15,6 +15,11 @@
 	<li><a href="facebook/profile.jpg">Square Ad 1</a></li>
 </ul>
 
+<h3>Facebook Profiles</h3>
+<ul>
+	<li><a href="fb_vote_profile/profile_vote.jpg">Vote March 20th Profile Photo</a></li>
+</ul>
+
 <h3>Google Ads</h3>
 <ul>
 	<li><a href="google/experience_counts/index.html">Experience Counts 300x250</a></li>
