--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -13,7 +13,7 @@
 	<li><a href="back_to_work/index.html">Back To Work</a></li>
 	<li><a href="more_better/index.html">Better Jobs</a></li>	
 	<li>&nbsp;</li>
-	li><a href="endorsed_by/index.html">Edgar Endorsement</a></li>
+	<li><a href="endorsed_by/index.html">Edgar Endorsement</a></li>
 </ul>
 
 <h3>Facebook Ads and Profiles</h3>
