--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -24,7 +24,7 @@
 <ul>
 	<li><a href="google/experience_counts/index.html">Experience Counts 300x250</a></li>
 	<li><a href="google/experience_counts/experience.zip">ZIP of said ad</a></li>
-	<li>#nbsp;</li>
+	<li>&nbsp;</li> 
 	<li><a href="google/kid_judge/index.html">Kid Judge 300x250</a></li>
 </ul>
 
