--- a/pf_consulting/randy_keith/hr_online_ads/endorsed_by_1920/endorsed_1920/endorsed_1920.html
+++ b/pf_consulting/randy_keith/hr_online_ads/endorsed_by_1920/endorsed_1920/endorsed_1920.html
@@ -109,15 +109,15 @@
         transform: translate3d(0px, 628px, 0px);
         animation-timing-function: linear;
       }
-      36.36% {
+      27.91% {
         transform: translate3d(0px, 624px, 0px);
         animation-timing-function: ease;
       }
-      51.52% {
+      39.53% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      90.91% {
+      93.02% {
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: ease;
       }
@@ -127,7 +127,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-1ogogwdanimation {
-      animation: gwd-gen-1ogogwdanimation_gwd-keyframes 3.3s linear 0s 1 normal forwards;
+      animation: gwd-gen-1ogogwdanimation_gwd-keyframes 4.3s linear 0s 1 normal forwards;
     }
     .gwd-img-1p4d {
       position: absolute;
@@ -142,15 +142,15 @@
         opacity: 0;
         animation-timing-function: linear;
       }
-      45.45% {
+      34.88% {
         opacity: 0;
         animation-timing-function: ease;
       }
-      57.58% {
+      44.19% {
         opacity: 1;
         animation-timing-function: linear;
       }
-      90.91% {
+      93.02% {
         opacity: 1;
         animation-timing-function: ease;
       }
@@ -160,7 +160,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-104tgwdanimation {
-      animation: gwd-gen-104tgwdanimation_gwd-keyframes 3.3s linear 0s 1 normal forwards;
+      animation: gwd-gen-104tgwdanimation_gwd-keyframes 4.3s linear 0s 1 normal forwards;
     }
     .gwd-img-1e22 {
       position: absolute;
@@ -176,9 +176,9 @@
         transform: translate3d(0px, 0px, 0px);
         animation-timing-function: linear;
       }
-      83.33% {
+      86.96% {
         transform: translate3d(0px, 0px, 0px);
-        animation-timing-function: ease-in;
+        animation-timing-function: ease;
       }
       100% {
         transform: translate3d(0px, -639px, 0px);
@@ -186,7 +186,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-lq7ygwdanimation {
-      animation: gwd-gen-lq7ygwdanimation_gwd-keyframes 3.6s linear 0s 1 normal forwards;
+      animation: gwd-gen-lq7ygwdanimation_gwd-keyframes 4.6s linear 0s 1 normal forwards;
     }
     .gwd-img-1qnz {
       position: absolute;
@@ -201,7 +201,7 @@
         opacity: 0;
         animation-timing-function: linear;
       }
-      92.31% {
+      93.88% {
         opacity: 0;
         animation-timing-function: ease;
       }
@@ -211,7 +211,32 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-1mqugwdanimation {
-      animation: gwd-gen-1mqugwdanimation_gwd-keyframes 3.9s linear 0s 1 normal forwards;
+      animation: gwd-gen-1mqugwdanimation_gwd-keyframes 4.9s linear 0s 1 normal forwards;
+    }
+    .gwd-img-s297 {
+      position: absolute;
+      width: 312px;
+      height: 70px;
+      left: 804px;
+      top: 530px;
+      opacity: 0;
+    }
+    @keyframes gwd-gen-1ezegwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      93.88% {
+        opacity: 0;
+        animation-timing-function: ease;
+      }
+      100% {
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1ezegwdanimation {
+      animation: gwd-gen-1ezegwdanimation_gwd-keyframes 4.9s linear 0s 1 normal forwards;
     }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -235,6 +260,7 @@
           <img is="gwd-image" source="assets/endorse_copy.png" id="endrose" class="gwd-img-1p4d gwd-gen-104tgwdanimation">
           <img is="gwd-image" source="assets/randy_profile.jpg" id="randy" class="gwd-img-1e22 gwd-gen-lq7ygwdanimation">
           <img is="gwd-image" source="assets/put_back.png" id="put_back" class="gwd-img-1qnz gwd-gen-1mqugwdanimation">
+          <img is="gwd-image" source="assets/paid_for.png" id="legalese" class="gwd-img-s297 gwd-gen-1ezegwdanimation">
         </div>
       </div>
     </div>
