--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -23,9 +23,10 @@
 <h3>Google Ads</h3>
 <ul>
 	<li><a href="google/experience_counts/index.html">Experience Counts 300x250</a></li>
-	<li><a href="google/experience_counts/experience.zip">ZIP of said ad</a></li>
+	<li><a href="google/experience_counts/experience.zip">ZIP of Experience Counts</a></li>
 	<li>&nbsp;</li> 
 	<li><a href="google/kid_judge/index.html">Kid Judge 300x250</a></li>
+	<li><a href="google/kid_judge.zip">Zip of Kid Judge</a></li>
 </ul>
 
 <h3>Postcards</h3>
