--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -19,6 +19,7 @@
 <h3>Facebook Ads and Profiles</h3>
 <ul>
 	<li><a href="fb_vote_profile/profile_vote.jpg">Vote March 20th Profile Photo</a></li>
+	<li><a href="fb_vote_profile/vote_today.jpg">Vote Today Profile Photo</a></li>
 </ul>
 
 <h3>Postcards</h3>
