RB profile photo.

--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -18,6 +18,7 @@
 <h3>Facebook Profiles</h3> 
 <ul>
 	<li><a href="fb_vote_profile/profile_vote.jpg">Vote March 20th Profile Photo</a></li>
+	<li><a href="fb_vote_profile/vote_today.jpg">Vote Today Profile Photo</a></li>
 </ul>
 
 <h3>Google Ads</h3>
