--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -18,6 +18,12 @@
 
 <h3>Facebook Ads and Profiles</h3>
 <ul>
+	<li><a href="hr_online_ads/1920.gif">1920px</a></li>
+	<li><a href="hr_online_ads/800.gif">800px</a></li>
+</ul>
+
+<h3>Herald Review Online Ads</h3>
+<ul>
 	<li><a href="fb_vote_profile/profile_vote.jpg">Vote March 20th Profile Photo</a></li>
 	<li><a href="fb_vote_profile/vote_today.jpg">Vote Today Profile Photo</a></li>
 </ul>
