Allen Jones assets.

--- a/pf_consulting/randy_keith/index.html
+++ b/pf_consulting/randy_keith/index.html
@@ -12,17 +12,16 @@
 <ul>
 	<li><a href="back_to_work/index.html">Back To Work</a></li>
 	<li><a href="more_better/index.html">Better Jobs</a></li>	
-	<li>&nbsp;</li>
 	<li><a href="endorsed_by/index.html">Edgar Endorsement</a></li>
 </ul>
 
-<h3>Facebook Ads and Profiles</h3>
+<h3>Herald Review Online Ads</h3>
 <ul>
 	<li><a href="hr_online_ads/1920.gif">1920px</a></li>
-	<li><a href="hr_online_ads/800.gif">800px</a></li>
+	<li><a href="hr_online_ads/800.gif">800px</a></li> 
 </ul>
 
-<h3>Herald Review Online Ads</h3>
+<h3>Facebook Ads and Profiles</h3>
 <ul>
 	<li><a href="fb_vote_profile/profile_vote.jpg">Vote March 20th Profile Photo</a></li>
 	<li><a href="fb_vote_profile/vote_today.jpg">Vote Today Profile Photo</a></li>
@@ -57,6 +56,8 @@
 <ul>
 	<li><a href="sticker/3x3_sticker.pdf">Newspaper Sticker</a></li>		
 </ul>
+
+<h2>Final March 20th Primary Assets</h2>
 
 </head>
 
