--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -25,7 +25,6 @@
 <ul>
 	<li><a href="google/experience_counts/index.html">Experience Counts 300x250</a></li>
 	<li><a href="google/experience_counts/experience.zip">ZIP of Experience Counts</a></li>
-	<li>&nbsp;</li> 
 	<li><a href="google/kid_judge/index.html">Kid Judge 300x250</a></li>
 	<li><a href="google/kid_judge.zip">Zip of Kid Judge</a></li>
 </ul>
@@ -40,6 +39,8 @@
 	<li><a href="611_mailers/experience_counts.pdf">Experience Counts</a></li>
 	<li><a href="611_mailers/justice_blind.pdf">Justice Is Blind</a></li>
 </ul>
+
+<h2>Final March 20th Primary Assets</h2>
 
 </head>
 
