Static google ad.

--- a/pf_consulting/allen_jones/index.html
+++ b/pf_consulting/allen_jones/index.html
@@ -15,6 +15,11 @@
 	<li><a href="fb_featured/3_today.jpg">Vote Today</a></li>
 </ul>
 
+<h3>Google Ads</h3>
+<ul>
+	<li><a href="google_ads/vote_today_static.jpg"></a></li>
+</ul>
+
 </head>
 
 <body>
