Rosenbaum weekend ad.

--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -41,6 +41,9 @@
 </ul>
 
 <h2>Final March 20th Primary Assets</h2>
+<ul>
+	<li>Weekend run: <a href="final_ads/1_weekend.jpg">95%</a></li>
+</ul>
 
 </head>
 
