Rosenbaum ads, temp.

--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -43,6 +43,9 @@
 <h2>Final March 20th Primary Assets</h2>
 <ul>
 	<li>Weekend run: <a href="final_ads/1_weekend.jpg">95%</a></li>
+	<li>Tuesday: <a href="final_ads/2_tuesday.jpg">Tuesday</a></li>
+	<li>Tomorrow: <a href="final_ads/3_tomorrow.jpg">Tomorrow</a></li>
+	<li>Today: <a href="final_ads/4_today.jpg">Today</a></li>
 </ul>
 
 </head>
