--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -46,6 +46,7 @@
 	<li>Tuesday: <a href="final_ads/2_tuesday.jpg">Tuesday</a></li>
 	<li>Tomorrow: <a href="final_ads/3_tomorrow.jpg">Tomorrow</a></li>
 	<li>Today: <a href="final_ads/4_today.jpg">Today</a></li>
+	<li>Banner ad: <a href="final_ads/rb_final_728x90/index.html">728x90</a></li>
 </ul>
 
 </head>
