Minor ad updates.

--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -47,6 +47,7 @@
 	<li>Tomorrow: <a href="final_ads/3_tomorrow.jpg">Tomorrow</a></li>
 	<li>Today: <a href="final_ads/4_today.jpg">Today</a></li>
 	<li>Banner ad: <a href="final_ads/rb_final_728x90/index.html">728x90</a></li>
+	<li>Box ad ad: <a href="final_ads/rb_final_300x250/index.html">300x250</a></li> 
 </ul>
 
 </head>
