--- a/pf_consulting/allen_jones/index.html
+++ b/pf_consulting/allen_jones/index.html
@@ -17,7 +17,7 @@
 
 <h3>Google Ads</h3>
 <ul>
-	<li><a href="google_ads/vote_today_static.jpg"></a></li>
+	<li><a href="google_ads/aj_final_300x250/index.html">300x250</a></li>
 </ul>
 
 </head>
