--- a/pf_consulting/randy_rosenbaum/index.html
+++ b/pf_consulting/randy_rosenbaum/index.html
@@ -46,8 +46,8 @@
 	<li>Tuesday: <a href="final_ads/2_tuesday.jpg">Tuesday</a></li>
 	<li>Tomorrow: <a href="final_ads/3_tomorrow.jpg">Tomorrow</a></li>
 	<li>Today: <a href="final_ads/4_today.jpg">Today</a></li>
-	<li>Banner ad: <a href="final_ads/rb_final_728x90/index.html">728x90</a></li>
-	<li>Box ad ad: <a href="final_ads/rb_final_300x250/index.html">300x250</a></li> 
+	<li>Banner ad: <a href="final_ads/rb_final_728x90/index.html">728x90</a> (Here as a <a href="final_ads/rb_final_728x90.zip">full ZIP</a>)</li>
+	<li>Box ad ad: <a href="final_ads/rb_final_300x250/index.html">300x250</a> (Here as a <a href="final_ads/rb_final_300x250.zip">full ZIP</a>)</li> 
 </ul>
 
 </head>
